[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/proto/boid/Boid_Micro.gd" type="Script" id=1]
[ext_resource path="res://scenes/proto/boid/Boid_Brain.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/proto/boid03.png" type="Texture" id=3]
[ext_resource path="res://assets/proto/boid01.png" type="Texture" id=4]
[ext_resource path="res://assets/proto/boid02.png" type="Texture" id=5]
[ext_resource path="res://assets/proto/boid04.png" type="Texture" id=6]
[ext_resource path="res://assets/explosionBig.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "boid03",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "boid01",
"speed": 0.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "boid02",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "boid04",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "explode"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[node name="Boid_Micro" type="RigidBody2D"]
collision_layer = 2
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.5
script = ExtResource( 1 )

[node name="Boid_Brain" parent="." instance=ExtResource( 2 )]
show_guide_vector = true

[node name="Skin" type="AnimatedSprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.063, 0.063 )
frames = SubResource( 1 )
animation = "boid03"

[node name="BodyCollide" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.983948, -1.01682 )
rotation = 1.5708
polygon = PoolVector2Array( 1.01322, -9.10851, -7.07661, 7.07542, 9.0963, 7.07542 )
one_way_collision_margin = 0.0

[node name="Explosion" type="Sprite" parent="."]
visible = false
position = Vector2( -0.902327, -1.6228 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
hframes = 9
frame = 2

[node name="ExplosionPlayer" type="AnimationPlayer" parent="Explosion"]
anims/explode = SubResource( 2 )

[node name="ExplosionTimer" type="Timer" parent="Explosion"]
wait_time = 0.08
[connection signal="body_entered" from="." to="." method="_on_Boid_Micro_body_entered"]
[connection signal="animation_finished" from="Explosion/ExplosionPlayer" to="." method="_on_ExplosionPlayer_animation_finished"]
[connection signal="timeout" from="Explosion/ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
